# NN_Profiles

./: .gitignore  README.md  __init__.py  calculate_fluxes.py  calculate_opacities.py  calculate_profiles.py  create_training.py  data.py  dataset.py  generate_profiles.py  hyper_param.py  learn_analytic_expression.ipynb  losses.py  main.py  model.py  model_structure  models.py  my_rnn.py  normalize.py  normalize_data.py  opacity_structure.py  plot_atm_structure.ipynb  plot_model_predictions.ipynb  profile_generator.py  pt_profile_generator.py  pyproject.toml  requirements.txt  rescale_data.py  rnn_recordings.pkl  run_sbatch_gattaca.sh  run_sbatch_gattaca_gpu.sh  setup.py  temp_file.py  test_model.ipynb  train.py  transformer_model.py  utils.py  visualizations.ipynb  visualize.py
.ipynb_checkpoints/: learn_analytic_expression-checkpoint.ipynb  plot_atm_structure-checkpoint.ipynb  plot_model_predictions-checkpoint.ipynb  test_model-checkpoint.ipynb
Docs/: conf.py  quickstart.rst
docs/: README.md  api_reference.html  build_docs.sh  code_structure.html  conf.py  genindex.html  getting_started.html  index.html  index.rst  objects.inv  quickstart.html  search.html  searchindex.js  usage_guide.html
docs/_sources/: code_structure.rst.txt  index.rst.txt  usage_guide.rst.txt
docs/source/: conf.py  getting_started.rst  index.rst
jupyter_notebooks/: learn_analytic_expression.ipynb  plot_atm_structure.ipynb  plot_model_predictions.ipynb  test_model.ipynb
outputs/20241209_162409_cjtobL/: checkpoint.pkl  hall_of_fame.csv.bak
outputs/20241209_162705_TBapxB/: checkpoint.pkl  (+1 more)
(+20 files in other folders)
